src/parser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { start: peg$parsestart, expression: peg$parseexpression },
      peg$startRuleFunction  = peg$parsestart,

      peg$c0 = function(program) {
          return locationInfo(location(), "Program", { type: "Program", body: program });
        },
      peg$c1 = "import",
      peg$c2 = peg$literalExpectation("import", false),
      peg$c3 = "{",
      peg$c4 = peg$literalExpectation("{", false),
      peg$c5 = "}",
      peg$c6 = peg$literalExpectation("}", false),
      peg$c7 = "from",
      peg$c8 = peg$literalExpectation("from", false),
      peg$c9 = ";",
      peg$c10 = peg$literalExpectation(";", false),
      peg$c11 = function(importSpecifiers, source) {
            return locationInfo(location(), "ImportDeclaration", { type: "importDeclaration", specifiers: importSpecifiers, source });
          },
      peg$c12 = "as",
      peg$c13 = peg$literalExpectation("as", false),
      peg$c14 = function(name) {
            return locationInfo(location(), "ImportSpecifier", { type: "importSpecifier", name, alias: alias || name });
          },
      peg$c15 = "export",
      peg$c16 = peg$literalExpectation("export", false),
      peg$c17 = function(declaration) {
            return locationInfo(location(), "ExportDeclaration", { type: "exportDeclaration", declaration });
          },
      peg$c18 = function(exportSpecifiers) {
            return locationInfo(location(), "ExportDeclaration", { type: "exportDeclaration", specifiers: exportSpecifiers });
          },
      peg$c19 = function(name) {
            return locationInfo(location(), "ExportSpecifier", { type: "exportSpecifier", name, alias: alias || name });
          },
      peg$c20 = function(expansion) {
            return locationInfo(location(), "ExpressionStatement", { type: "expressionStatement", expression: expansion });
          },
      peg$c21 = function(expr) { 
            return locationInfo(location(), "ExpressionStatement", { 
              type: "expressionStatement", 
              expression: expr 
            }); 
          },
      peg$c22 = function(expr) { return expr; },
      peg$c23 = "=",
      peg$c24 = peg$literalExpectation("=", false),
      peg$c25 = function(left, right) {
            return locationInfo(location(), "Assignment", { type: "assignment", left, right });
          },
      peg$c26 = "||",
      peg$c27 = peg$literalExpectation("||", false),
      peg$c28 = function(head, tail) {
            return tail.reduce((result, element) => 
              locationInfo(location(), "LogicalOr", {
                type: "logicalOr",
                left: result,
                right: element[3]
              }), head);
          },
      peg$c29 = "&&",
      peg$c30 = peg$literalExpectation("&&", false),
      peg$c31 = function(head, tail) {
            return tail.reduce((result, element) => 
              locationInfo(location(), "LogicalAnd", {
                type: "logicalAnd",
                left: result,
                right: element[3]
              }), head);
          },
      peg$c32 = "<=",
      peg$c33 = peg$literalExpectation("<=", false),
      peg$c34 = ">=",
      peg$c35 = peg$literalExpectation(">=", false),
      peg$c36 = "==",
      peg$c37 = peg$literalExpectation("==", false),
      peg$c38 = "!=",
      peg$c39 = peg$literalExpectation("!=", false),
      peg$c40 = "<",
      peg$c41 = peg$literalExpectation("<", false),
      peg$c42 = ">",
      peg$c43 = peg$literalExpectation(">", false),
      peg$c44 = function(head, tail) {
            return tail.reduce((result, element) => 
              locationInfo(location(), "Comparison", {
                type: "comparison",
                operator: element[1],
                left: result,
                right: element[3]
              }), head);
          },
      peg$c45 = "+",
      peg$c46 = peg$literalExpectation("+", false),
      peg$c47 = "-",
      peg$c48 = peg$literalExpectation("-", false),
      peg$c49 = function(head, tail) {
            return tail.reduce((result, element) => 
              locationInfo(location(), "Addition", {
                type: "addition",
                operator: element[1],
                left: result,
                right: element[3]
              }), head);
          },
      peg$c50 = "*",
      peg$c51 = peg$literalExpectation("*", false),
      peg$c52 = "/",
      peg$c53 = peg$literalExpectation("/", false),
      peg$c54 = "%",
      peg$c55 = peg$literalExpectation("%", false),
      peg$c56 = function(head, tail) {
            return tail.reduce((result, element) => 
              locationInfo(location(), "Multiplication", {
                type: "multiplication",
                operator: element[1],
                left: result,
                right: element[3]
              }), head);
          },
      peg$c57 = "!",
      peg$c58 = peg$literalExpectation("!", false),
      peg$c59 = "typeof",
      peg$c60 = peg$literalExpectation("typeof", false),
      peg$c61 = function(operator, right) {
            return locationInfo(location(), "Unary", { type: "unary", operator, right });
          },
      peg$c62 = "(",
      peg$c63 = peg$literalExpectation("(", false),
      peg$c64 = ")",
      peg$c65 = peg$literalExpectation(")", false),
      peg$c66 = "[",
      peg$c67 = peg$literalExpectation("[", false),
      peg$c68 = "]",
      peg$c69 = peg$literalExpectation("]", false),
      peg$c70 = ".",
      peg$c71 = peg$literalExpectation(".", false),
      peg$c72 = function(head, tail) {
            return tail.reduce((result, element) => {
              if (element[1][0] === "(") {
                return locationInfo(location(), "FunctionCall", { type: "functionCall", callee: result, arguments: element[1][2] });
              } else if (element[1][0] === "[") {
                return locationInfo(location(), "MemberExpression", { type: "memberExpression", object: result, property: element[1][2], computed: true });
              } else {
                return locationInfo(location(), "MemberExpression", { type: "memberExpression", object: result, property: element[1][2], computed: false });
              }
            }, head);
          },
      peg$c73 = "self",
      peg$c74 = peg$literalExpectation("self", false),
      peg$c75 = function() { return locationInfo(location(), "Self", { type: "self" }); },
      peg$c76 = function(head, tail) {
            return tail.reduce((result, element) => {
              if (element[0] === ".") {
                return locationInfo(location(), "MemberExpression", {
                  type: "memberExpression",
                  object: result,
                  property: element[1],
                  computed: false
                });
              } else {
                return locationInfo(location(), "MemberExpression", {
                  type: "memberExpression",
                  object: result,
                  property: element[2],
                  computed: true
                });
              }
            }, head);
          },
      peg$c77 = function(expression) { return expression; },
      peg$c78 = "new",
      peg$c79 = peg$literalExpectation("new", false),
      peg$c80 = function(className, args) {
            return locationInfo(location(), "ObjectCreation", { type: "objectCreation", className, arguments: args });
          },
      peg$c81 = function(elements) {
            return locationInfo(location(), "ArrayLiteral", { type: "arrayLiteral", elements: elements || [] });
          },
      peg$c82 = ",",
      peg$c83 = peg$literalExpectation(",", false),
      peg$c84 = function(head, tail) {
            return [head, ...tail.map(element => element[3])];
          },
      peg$c85 = /^[a-zA-Z_]/,
      peg$c86 = peg$classExpectation([["a", "z"], ["A", "Z"], "_"], false, false),
      peg$c87 = /^[a-zA-Z0-9_]/,
      peg$c88 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false),
      peg$c89 = function(name) {
            return locationInfo(location(), "Identifier", { type: "identifier", name: text() });
          },
      peg$c90 = "function",
      peg$c91 = peg$literalExpectation("function", false),
      peg$c92 = "class",
      peg$c93 = peg$literalExpectation("class", false),
      peg$c94 = "extends",
      peg$c95 = peg$literalExpectation("extends", false),
      peg$c96 = "constructor",
      peg$c97 = peg$literalExpectation("constructor", false),
      peg$c98 = "var",
      peg$c99 = peg$literalExpectation("var", false),
      peg$c100 = "let",
      peg$c101 = peg$literalExpectation("let", false),
      peg$c102 = "const",
      peg$c103 = peg$literalExpectation("const", false),
      peg$c104 = "if",
      peg$c105 = peg$literalExpectation("if", false),
      peg$c106 = "else",
      peg$c107 = peg$literalExpectation("else", false),
      peg$c108 = "for",
      peg$c109 = peg$literalExpectation("for", false),
      peg$c110 = "while",
      peg$c111 = peg$literalExpectation("while", false),
      peg$c112 = "return",
      peg$c113 = peg$literalExpectation("return", false),
      peg$c114 = "true",
      peg$c115 = peg$literalExpectation("true", false),
      peg$c116 = "false",
      peg$c117 = peg$literalExpectation("false", false),
      peg$c118 = "null",
      peg$c119 = peg$literalExpectation("null", false),
      peg$c120 = "macro",
      peg$c121 = peg$literalExpectation("macro", false),
      peg$c122 = /^[0-9]/,
      peg$c123 = peg$classExpectation([["0", "9"]], false, false),
      peg$c124 = function(digits) { 
            return locationInfo(location(), "Integer", { type: "integer", value: parseInt(digits.join(""), 10) }); 
          },
      peg$c125 = function(digits, fractional) {
            return locationInfo(location(), "Float", { type: "float", value: parseFloat(digits.join("") + "." + fractional.join("")) });
          },
      peg$c126 = "\"",
      peg$c127 = peg$literalExpectation("\"", false),
      peg$c128 = /^[^"\\]/,
      peg$c129 = peg$classExpectation(["\"", "\\"], true, false),
      peg$c130 = function(chars) {
            return locationInfo(location(), "String", { type: "string", value: chars.join("") });
          },
      peg$c131 = function() { 
            return locationInfo(location(), "Boolean", { type: "boolean", value: text() === "true" }); 
          },
      peg$c132 = "'",
      peg$c133 = peg$literalExpectation("'", false),
      peg$c134 = /^[^'\\]/,
      peg$c135 = peg$classExpectation(["'", "\\"], true, false),
      peg$c136 = function(char) {
            return locationInfo(location(), "Char", { type: "char", value: char });
          },
      peg$c137 = "\\",
      peg$c138 = peg$literalExpectation("\\", false),
      peg$c139 = /^["\\\/bfnrt]/,
      peg$c140 = peg$classExpectation(["\"", "\\", "/", "b", "f", "n", "r", "t"], false, false),
      peg$c141 = "u",
      peg$c142 = peg$literalExpectation("u", false),
      peg$c143 = /^[0-9a-fA-F]/,
      peg$c144 = peg$classExpectation([["0", "9"], ["a", "f"], ["A", "F"]], false, false),
      peg$c145 = function() {4},
      peg$c146 = function(digits) {
            return String.fromCharCode(parseInt(digits.join(""), 16));
          },
      peg$c147 = function(head, tail) {
            const args = head ? [head] : [];
            return args.concat(tail.map(element => element[3]));
          },
      peg$c148 = function(kind, id, initialization) {
            return locationInfo(location(), "VariableDeclaration", { 
              type: "variableDeclaration", 
              kind, 
              id, 
              init: initialization ? initialization[2] : null 
            });
          },
      peg$c149 = function(test, consequent, else_clause) {
            return locationInfo(location(), "IfStatement", {
              type: "ifStatement",
              test: test,
              consequent: consequent,
              alternate: else_clause ? else_clause[2] : null
            });
          },
      peg$c150 = function(init, test, update, body) {
            return locationInfo(location(), "ForLoop", { 
              type: "forLoop", 
              init: init || null, 
              test: test || null, 
              update: update || null, 
              body 
            });
          },
      peg$c151 = function(test, body) {
            return locationInfo(location(), "WhileLoop", { type: "whileLoop", test, body });
          },
      peg$c152 = function(value) {
            return locationInfo(location(), "ReturnStatement", { type: "returnStatement", value });
          },
      peg$c153 = function(statements) { return statements; },
      peg$c154 = function(name, params, body) {
            return locationInfo(location(), "FunctionDefinition", { type: "functionDefinition", name, params, body });
          },
      peg$c155 = function(name, extendsClause, constructor, members) {
            return locationInfo(location(), "ClassDefinition", { 
              type: "classDefinition", 
              name, 
              superClass: extendsClause ? extendsClause[2] : null,
              constructor: constructor || { type: "constructorDefinition", params: [], body: [] },
              members 
            });
          },
      peg$c156 = function(params, body) {
            return locationInfo(location(), "ConstructorDefinition", { type: "constructorDefinition", params, body });
          },
      peg$c157 = function(name, params, body) {
            return locationInfo(location(), "MethodDefinition", { type: "methodDefinition", name, params, body });
          },
      peg$c158 = function(name) {
            return locationInfo(location(), "PropertyDefinition", { type: "propertyDefinition", name, value });
          },
      peg$c159 = function(head, tail) {
            const params = head ? [head] : [];
            return params.concat(tail.map(element => element[3]));
          },
      peg$c160 = function(name, params, body) {
            return locationInfo(location(), "MacroDefinition", { type: "macroDefinition", name, params, body });
          },
      peg$c161 = "#",
      peg$c162 = peg$literalExpectation("#", false),
      peg$c163 = function(name, args) {
            return locationInfo(location(), "MacroExpansion", { type: "macroExpansion", name, arguments: args || [] });
          },
      peg$c164 = /^[^}]/,
      peg$c165 = peg$classExpectation(["}"], true, false),
      peg$c166 = function(chars) { return chars.join("").trim(); },
      peg$c167 = /^[ \t\n\r]/,
      peg$c168 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false),
      peg$c169 = "//",
      peg$c170 = peg$literalExpectation("//", false),
      peg$c171 = /^[^\n]/,
      peg$c172 = peg$classExpectation(["\n"], true, false),
      peg$c173 = "/*",
      peg$c174 = peg$literalExpectation("/*", false),
      peg$c175 = "*/",
      peg$c176 = peg$literalExpectation("*/", false),
      peg$c177 = peg$anyExpectation(),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parsemoduleItem();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parsemoduleItem();
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c0(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsemoduleItem() {
    var s0;

    s0 = peg$parseimportDeclaration();
    if (s0 === peg$FAILED) {
      s0 = peg$parseexportDeclaration();
      if (s0 === peg$FAILED) {
        s0 = peg$parsestatement();
      }
    }

    return s0;
  }

  function peg$parseimportDeclaration() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14;
